# react-native-skia

./: .eslintrc.js  .flowconfig  .gitignore  .gitmodules  .npmrc  404.html  BUILDING.md  CHANGELOG.md  COMMITTERS.md  OAT.xml  README.OpenSource  README.md  babel.config.js  bun.lockb  bundle.js  index.html  index.js  jestSetup.js  jestSetup.mjs  opensearch.xml  package.json  react-native-skia.podspec  sitemap.xml  tsconfig.json  turbo.json
.github/: CODEOWNERS  dependabot.yml
android/: .project  cpp
apple/: MetalContext.h  MetalWindowContext.mm  RNSkApplePlatformContext.mm  RNSkMetalCanvasProvider.h  SkiaManager.mm
blog/: atom.xml  index.html  rss.xml
docs/: docusaurus.config.js  package.json  sidebars.js  tsconfig.json
example/: .eslintcache  .eslintrc  .gitignore  .node-version  App.js  (+22 more)
example/harmony/entry/src/main/cpp/: .gitignore  CMakeLists.txt  PackageProvider.cpp
harmony/skia/src/main/cpp/: CMakeLists.txt  RNSkiaModule.cpp  RNSkiaModule.h  SkiaDomViewComponentDescriptor.h  SkiaDomViewNapiBinder.h  SkiaManager.cpp  SkiaManager.h  SkiaPackage.cpp  SkiaPackage.h  SkiaPictureViewComponentDescriptor.h  SkiaViewJSIBinder.h  SkiaViewNapiBinder.h
harmony/skia/src/main/cpp/freetype/freetype/: freetype.h
harmony/skia/src/main/cpp/json/: CMakeLists.txt
harmony/skia/src/main/cpp/json/src/: json_reader.cpp  json_tool.h  json_value.cpp  json_writer.cpp
harmony/skia/src/main/cpp/napi/: n_func_arg.cpp  n_func_arg.h  n_val.cpp  n_val.h
harmony/skia/src/main/cpp/rnskia/: HarmonyBufferUtils.cpp  HarmonyBufferUtils.h  HarmonyOpenGLHelper.h  HarmonyPlatformContext.cpp  HarmonyPlatformContext.h  HarmonyPlayLink.cpp  HarmonyPlayLink.h  NativeImageAdaptor.cpp  NativeImageAdaptor.h  NativeRender.cpp  NativeRender.h  RNSkHarmonyVideo.cpp  RNSkHarmonyVideo.h  RNSkHarmonyView.h  RNSkOpenGLCanvasProvider.h  audio_decoder.cpp  audio_decoder.h  audio_player.cpp  audio_player.h  common.h  decoder.cpp  decoder.h  demuxer.cpp  demuxer.h  egl_core.cpp  egl_core.h  napi_init.cpp  plugin_manager.cpp  plugin_manager.h  plugin_render.cpp  plugin_render.h  sample_callback.cpp  sample_callback.h  sample_info.h
harmony/skia/src/main/cpp/skia/: BoxShadowProps.h  Declaration.h  DeclarationContext.h  JniPlatformContext.h  JniSkiaBaseView.h  JniSkiaDomView.h  JniSkiaManager.h  JniSkiaPictureView.h  JsiAtlasNode.h  JsiDomApi.h  JsiPathNode.h  JsiPromises.h  JsiSkAnimatedImage.h  JsiSkColorFilterFactory.h  JsiSkData.h  JsiSkFontMgrFactory.h  JsiSkFontStyle.h  JsiSkParagraphBuilder.h  JsiSkPath.h  JsiSkRuntimeEffect.h  JsiSkShader.h  JsiSkTypefaceFactory.h  JsiSkVertices.h  NumbersProp.h  PaintProps.h  ParagraphProp.h  PointProp.h  RNSkAndroidVideo.h  RNSkAndroidView.h  RNSkDomView.h  RNSkJsiViewApi.h  RNSkManager.cpp  RectProp.h  SkiaOpenGLHelper.h  SkiaOpenGLSurfaceFactory.h  StrokeProps.h  TransformProp.h  VertexModeProp.h  common.h
harmony/skia/src/main/cpp/skia/include/config/: SkUserConfig.h
harmony/skia/src/main/cpp/skia/modules/canvaskit/external_test/: Makefile
harmony/skia/src/main/cpp/skia/src/core/: SkFontDescriptor.h
harmony/skia/src/main/cpp/skia/src/gpu/ganesh/gl/harmony/: BUILD.bazel
harmony/skia/src/main/cpp/skia_ohos/: FontConfig_ohos.cpp  FontConfig_ohos.h  FontInfo_ohos.h  HMSymbol.cpp  HMSymbol.h  HmSymbolConfig_ohos.cpp  HmSymbolConfig_ohos.h  SkFontMgr_ohos.cpp  SkFontMgr_ohos.h  SkFontMgr_ohos_factory.cpp  SkFontStyleSet_ohos.cpp  SkFontStyleSet_ohos.h  SkTypeface_ohos.cpp  SkTypeface_ohos.h
harmony/skia/src/main/cpp/skia_ohos/config/: fontconfig.json
harmony/skia/src/main/cpp/types/libskia/: Index.d.ts  oh-package.json5
package/android/: .project  CMakeLists.txt  build.gradle
package/android/cpp/: api  jsi  rnskia  skia  utils
package/android/cpp/jni/: JniLoad.cpp  JniPlatformContext.cpp  JniPlatformContext.h  JniPlatformContextWrapper.h  JniSkiaDrawView.cpp  JniSkiaDrawView.h  JniSkiaManager.cpp  JniSkiaManager.h  SkiaOpenGLRenderer.cpp
package/android/cpp/jni/include/: JniPlatformContext.h  JniPlatformContextWrapper.h  JniSkiaBaseView.h  JniSkiaDomView.h  JniSkiaDrawView.h  JniSkiaImperativeView.h  JniSkiaManager.h  JniSkiaPictureView.h  SkiaOpenGLRenderer.h
package/android/cpp/rnskia-android/: AHardwareBufferUtils.cpp  AHardwareBufferUtils.h  Config.cpp  Config.h  Context.cpp  Context.h  Display.cpp  Display.h  GrAHardwareBufferUtils.cpp  GrAHardwareBufferUtils.h  Macros.h  OpenGLSkiaContext.cpp  OpenGLSkiaContext.h  OpenGLSurfaceProvider.h  Proc.cpp  Proc.h  RNSkAndroidJsView.h  RNSkAndroidPlatformContext.h  RNSkAndroidVideo.cpp  RNSkAndroidVideo.h  RNSkAndroidView.h  RNSkDrawViewImpl.cpp  RNSkDrawViewImpl.h  RNSkOpenGLCanvasProvider.cpp  RNSkOpenGLCanvasProvider.h  SkiaOpenGLContextProvider.cpp  SkiaOpenGLContextProvider.h  SkiaOpenGLHelper.h  SkiaOpenGLRenderer.cpp  SkiaOpenGLRenderer.h  SkiaOpenGLSurfaceFactory.cpp  SkiaOpenGLSurfaceFactory.h  Surface.cpp  Surface.h
package/android/cpp/rnskia-android/gltoolkit/: Config.cpp  Config.h  Context.cpp  Context.h  Display.cpp  Display.h  Macros.h  Proc.cpp  Proc.h  Surface.cpp  Surface.h
package/android/jni/: JniLoad.cpp  JniPlatformContext.cpp  JniPlatformContext.h  JniSkiaDrawView.cpp  JniSkiaDrawView.h  JniSkiaManager.h
package/android/src/main/java/com/shopify/reactnative/skia/: PlatformContext.java  RNSkVideo.java  RNSkiaModule.java  RNSkiaModulePackage.java  RNSkiaPackage.java  RNSkiaViewManager.java  SkiaBaseView.java  SkiaBaseViewManager.java  SkiaBitmapView.java  SkiaBitmapViewManager.java  SkiaDomView.java  SkiaDomViewManager.java  SkiaDrawView.java  SkiaDrawViewManager.java  SkiaImperativeView.java  SkiaImperativeViewManager.java  SkiaManager.java  SkiaPictureView.java  SkiaRenderer.java  SkiaView.java  SkiaViewManager.java  ViewScreenshotService.java
package/android/src/paper/java/com/facebook/react/viewmanagers/: SkiaImperativeViewManagerDelegate.java  SkiaImperativeViewManagerInterface.java
package/android/src/paper/java/com/shopify/reactnative/skia/: SkiaViewManagerSpec.java
package/android/src/reactnative69/java/com/shopify/reactnative/skia/: ReactNativeCompatible.java
(+7766 files in other folders)
